cabal-version: 3.0
name: pouch
version: 0.1.0.0

synopsis:
    A pouch of handy types and functions to build Haskell applications.

homepage: https://github.com/realfolk/haskell-pouch
license: LGPL-3.0-only
license-file: LICENSE

author: Dhruv Dang
maintainer: dhruv@realfolk.com

category: Development

build-type: Simple

library
    ghc-options: -Wall

    default-language: GHC2021
    hs-source-dirs: lib

    exposed-modules:
        Pouch
        Pouch.Base58
        Pouch.Base64
        Pouch.Binary
        Pouch.Concurrent.Lock
        Pouch.Concurrent.Queue
        Pouch.Crypto.Hash
        Pouch.Crypto.Hash.SHA1
        Pouch.Crypto.Password
        Pouch.Crypto.Random
        Pouch.Either
        Pouch.Math.Rational
        Pouch.Number.Word128
        Pouch.Number.Word256
        Pouch.Parsec
        Pouch.Queue
        Pouch.Ref
        Pouch.Text
        Pouch.Time
        Pouch.Time.Date
        Pouch.Time.Date.Formatter
        Pouch.Time.Formatter
        Pouch.Time.Month
        Pouch.Time.Weekday
        Pouch.Tuple
        Pouch.URL.Component.Fragment
        Pouch.URL.Component.Host
        Pouch.URL.Component.Host.IP.V4
        Pouch.URL.Component.Host.IP.V6
        Pouch.URL.Component.Path
        Pouch.URL.Component.Port
        Pouch.URL.Component.Query
        Pouch.URL.Component.Query.Item
        Pouch.URL.Component.User
        Pouch.URL.Component.User.Name
        Pouch.URL.Component.User.Password
        Pouch.URL.HTTP
        Pouch.UUID

    other-modules:
        Pouch.URL.Component.Internal

    build-depends:
        base ^>=4.16.4.0,
        base58-bytestring,
        base64-bytestring,
        basement,
        binary,
        bytestring,
        comonad,
        containers,
        cryptonite,
        http-types,
        memory,
        microlens,
        mtl,
        network-uri,
        parsec,
        uuid,
        text,
        time,
        wai

executable hash-password
    ghc-options: -Wall

    default-language: GHC2021
    hs-source-dirs: exe/hash-password
    main-is: Main.hs

    build-depends:
        base ^>=4.16.4.0,
        bytestring,
        pouch,
        text

test-suite pouch-test
    ghc-options: -Wall -threaded -rtsopts

    type: exitcode-stdio-1.0

    default-language: GHC2021
    hs-source-dirs: test
    main-is: Spec.hs

    other-modules:
        Test.Pouch.Math.RationalSpec
        Test.Pouch.URL.Component.Query.ItemSpec
        Test.Pouch.URL.Component.QuerySpec

    build-depends:
        base ^>=4.16.4.0,
        containers,
        hspec,
        pouch,
        wai
